Fixed logo centering on smaller devices

--- a/homepage/src/components/Nav/NavBar.css
+++ b/homepage/src/components/Nav/NavBar.css
@@ -18,8 +18,8 @@
 }
 
 .logo > img {
-    position: absolute;
-    top: 50%;
+    position: relative;
+    top: 20%;
     transform: translateY(-50%);
 }
 
